--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,6 @@ deps/lastrev.txt
 *.id2
 *.nam
 *.til
+t4m/.vs/t4m/v17/Browse.VC.db
+t4m/.vs/t4m/FileContentIndex/105c5a52-ac1b-4f44-90a0-71aa5d70aae5.vsidx
+t4m/.vs/t4m/FileContentIndex/read.lock
